除调试和其他外基本功能已经实现，目前版本存在问题时，第二次进行实验时，蓝牙连接会失败

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <application
         android:allowBackup="true"
@@ -29,6 +31,10 @@
         <activity android:name=".AboutActivity"/>
         <activity android:name=".TestInformationActivity"/>
         <activity android:name=".TestActivity"/>
+        <activity android:name=".TestReport" />
+        <activity android:name=".HistoryActivity" />
+        <activity android:name=".HistoryData"/>
+
 
 
     </application>
